# KimuVerb

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.4.md
.github/workflows/: release.yml
Documentation/: SUPPORT_INFO.md
Release/KimuVerb_v1.0_Release/Documentation/: GITHUB_PAGES_PROMPT.md  INSTALLATION.md  README.md  USER_MANUAL.md
Release/KimuVerb_v1.0_Release/License/: LICENSE.txt
Release/KimuVerb_v1.0_Release/Plugin Files/KimuVerb.vst3/Contents/Resources/: moduleinfo.json
docs/: index.html  script.js  styles.css
src/: AudioProcessorARA_stubs.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PluginProcessor_ARA.cpp
